--- a/views/about.pug
+++ b/views/about.pug
@@ -12,7 +12,7 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Name
+        h1 Kyle Zvejnieks
 
         //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
@@ -21,7 +21,7 @@ block content
         .about-bio
 
           //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p I'm Kyle, I'm like...
 
 
       .skills-contact-box.box
@@ -45,13 +45,11 @@ block content
 
         //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li 605-430-7926
+          li kyle.z@hey.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
         a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
 
     nav.nav
       a(href='/')
