--- a/views/index.pug
+++ b/views/index.pug
@@ -15,14 +15,15 @@ block content
     .projects-box.box.grid
 
       //- Use the Pug `each` iterator to loop over the projects in your data file  
-      
+      each project, index in projects
+
         //- Use the example Pug code below and interpolated template literals as needed to dynamically generate:
           //- The paths in the link's href and img's src attributes
           //- The text 'Thumbnail' interpolated with the project title for the img's alt attribute
           //- The project title for the h5 element's text
 
         .cell
-          a(href='#')
-            img.thumbnail(src='https://placehold.it/550x550', alt='')
-            h5 My Site
+          a(href= `${project.live_link}`)
+            img.thumbnail(src='https://picsum.photos/550/', alt=`${project.project_name}`)
+            h5= project.project_name
 
